# bioprocess-web

./: .dockerignore  .env.template  .gitignore  BUG_REPORT.txt  Codex_Tasks.md  Dockerfile  Dockerfile.frontend  FRONTEND_GUIDE.md  Facility1_Yogurt_Cultures_10TPA_calc.xlsx  Facility2_Lacto_Bifido_10TPA_calc.xlsx  Facility3_Bacillus_Spores_10TPA_calc.xlsx  Facility4_Yeast_Probiotic_10TPA_calc.xlsx  Facility5_ALL_IN_40TPA_calc.xlsx  PROJECT_SCOPE.md  README.md  REMAINING_TASKS.md  Roo_tasks.md  TODO Masterplan (detailed and actiona.md  UPDATED_TASK_LIST.md  comprehensive_form_test_results_20250821_234215.json  comprehensive_form_test_results_20250821_234410.json  comprehensive_form_test_results_20250821_234549.json  comprehensive_form_test_results_20250821_234813.json  comprehensive_form_test_results_20250821_235127.json  comprehensive_form_test_results_20250822_000142.json  cross_validation_api.py  cross_validation_proper.py  debug_api_flow.py  debug_optimization.py  debug_optimization_evaluations.py  debug_volumes.py  docker-compose.yml  fermentation_capacity_calculator.py  form_data_test_result_20250821_232133.json  form_data_test_result_20250821_232513.json  form_validation_results_20250821_232704.json  form_validation_results_20250821_233227.json  frontend_form_test_results_20250821_233433.json  nginx.conf  optimization_debug_result_20250821_234954.json  (+12 more)
api/: main.py  routers.py  schemas.py  services.py  sse.py  sse_router.py  validators.py
bioprocess/: capacity.py  constants.py  econ.py  equipment_optimizer.py  excel.py  fermentation_capacity_calculator.py  models.py  optimizer.py  optimizer_consolidated.py  optimizer_enhanced.py  optimizer_original_backup.py  orchestrator.py  presets.py  sizing.py
docs/: API_REFERENCE.md  DOCUMENTATION_CLEANUP.md  ParityMode.md  README.md  TEST_SUITE_REPORT.md  VALIDATION.md  metric_extraction_spec.md  repo_map.md
scripts/: verify_wvf_and_royalty.py
tests/: conftest.py  e2e_test.py  test_api.py  test_api_direct_converted.py  test_bioprocess.py  (+5 more)
(+17 files in other folders)
