[tool.poetry]
name = "bioprocess-web"
version = "1.0.0"
description = "Web application for bioprocess facility design and optimization"
authors = ["Bioprocess Team"]
readme = "README.md"
python = "^3.10"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | bioprocess/pricing_integrated_original.py
  | bioprocess/fermentation_capacity_calculator.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["venv", ".venv", "bioprocess/pricing_integrated_original.py", "bioprocess/fermentation_capacity_calculator.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --ignore=bioprocess/pricing_integrated_original.py --ignore=bioprocess/fermentation_capacity_calculator.py"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["bioprocess", "api"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "bioprocess/pricing_integrated_original.py",
    "bioprocess/fermentation_capacity_calculator.py"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
